<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_HFE" Id="{301218ac-ee94-495f-9309-2c415b44e5ac}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_HFE :
STRUCT
	///configuration
	///parameter
	Par: T_Ctrl_SIf_HFE_Par;
	///current values
	Cur: T_Ctrl_SIf_HFE_Cur;
	///alarm number used in this controller
	Alm: ARRAY[1..6] OF T_Ctrl_Alm;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>